--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                  <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                 <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
 
@@ -152,7 +152,7 @@
         <!-- почта и телефон? -->
         <address>
             <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+            <a href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
     </footer>
 
